--- a/app/views/pages/chapters.html.twig
+++ b/app/views/pages/chapters.html.twig
@@ -18,7 +18,7 @@
                     {#                    {{ dump(chapters) }}#}
                     <!-- First Blog Post -->
                     {% for chapter in chapters %}
-                        <div class="card card-body mb-3">
+                        <div class="card card-body my-5">
 
                             <h4><a href="index.php?action=showChapter&id={{ chapter.id }}">{{ chapter.title |raw }}</a>
                             </h4>
@@ -28,7 +28,7 @@
                             <img class="img-fluid" src="https://picsum.photos/id/{{ chapter.id + photoId }}/730/250"
                                  alt="">
 
-                            <p class="card-text py-2">
+                            <p class="card-text py-2 text-justify">
                                 {{ chapter.content |slice(0,500)|raw }}...
                             </p>
 
@@ -41,7 +41,7 @@
                 </div>
 
                 <!-- Blog Sidebar Widgets Column -->
-                <div class="col-md-4">
+                <div class="col-md-4 my-5">
 
                     <!-- Blog Chapitres Well -->
                     <div class="card">
