--- a/app/views/pages/contact.html.twig
+++ b/app/views/pages/contact.html.twig
@@ -1,17 +1,17 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
+    {{ message_contact }}
     <section id="showcase" class="d-flex justify-content-center align-items-center" style="min-height: 750px;">
         <div id="overlay"></div>
         <div id="header" class="container text-white text-center">
-{#            <h3 class="display-5 mb-0">ME CONTACTER</h3>#}
             <h1 class="display-3">Ecrivez-moi deux mots...</h1>
-            <p class="lead d-none d-md-block">Votre retour est très important pour moi.</p>
+            <p class="lead d-none d-md-block py-5">Votre retour est très important pour moi.</p>
         </div>
     </section>
     <section class="p-5">
         <div class="container text-white text-center py-5">
-            <form action="index.php?action=contact" name="sendMail" method="post">
+            <form action="index.php?action=sendMail" name="sendMail" method="post">
                 <div class="input-group justify-content-center">
                     <div class="col-md-5">
                         <div class="form-group">
