--- a/app/views/pages/admin.base.html.twig
+++ b/app/views/pages/admin.base.html.twig
@@ -57,7 +57,7 @@
                 <div class="col-md-4 d-none d-lg-block">
                     <div class="list-group">
                         {% block pagesActive %}
-                            <a href="index.php?action=adminView" class="list-group-item list-group-item-action active"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
+{#                            <a href="index.php?action=adminView" class="list-group-item list-group-item-action active"><i class="fas fa-tachometer-alt"></i> Dashboard</a>#}
                             <a href="index.php?action=adminChapters" class="list-group-item list-group-item-action"><i class="fas fa-book"></i> Chapitres</a>
                             <a href="index.php?action=adminComments" class="list-group-item list-group-item-action"><i class="fas fa-comments"></i> Commentaires</a>
                         {% endblock %}
