--- a/app/views/pages/admin.chapters.html.twig
+++ b/app/views/pages/admin.chapters.html.twig
@@ -1,8 +1,8 @@
 ﻿{% extends "admin.base.html.twig" %}
 
 {% block pagesActive %}
-    <a href="index.php?action=adminView" class="list-group-item list-group-item-action"><i
-                class="fas fa-tachometer-alt"></i> Dashboard</a>
+{#    <a href="index.php?action=adminView" class="list-group-item list-group-item-action"><i#}
+{#                class="fas fa-tachometer-alt"></i> Dashboard</a>#}
     <a href="index.php?action=adminChapters" class="list-group-item list-group-item-action active"><i
                 class="fas fa-book"></i> Chapitres</a>
     <a href="index.php?action=adminComments" class="list-group-item list-group-item-action"><i
@@ -43,7 +43,7 @@
         </tr>
         </thead>
 
-        {{ dump() }}
+{#        {{ dump() }}#}
         {% for chapter in chapters %}
             <tbody>
             <tr>
