--- a/app/views/pages/admin.comments.html.twig
+++ b/app/views/pages/admin.comments.html.twig
@@ -1,7 +1,7 @@
 {% extends "admin.base.html.twig" %}
 {% block pagesActive %}
-    <a href="index.php?action=adminView" class="list-group-item list-group-item-action"><i
-                class="fas fa-tachometer-alt"></i> Dashboard</a>
+{#    <a href="index.php?action=adminView" class="list-group-item list-group-item-action"><i#}
+{#                class="fas fa-tachometer-alt"></i> Dashboard</a>#}
     <a href="index.php?action=adminChapters" class="list-group-item list-group-item-action"><i class="fas fa-book"></i>
         Chapitres</a>
     <a href="index.php?action=adminComments" class="list-group-item list-group-item-action active"><i
@@ -13,13 +13,6 @@
      <div class="row">
          <div class="col-md-6">
              <h2>Commentaires</h2>
-         </div>
-         <div class="col-md-6 ">
-             <div class="btn-group btn-group-sm float-right" role="group" aria-label="...">
-                 <a href="#" class="btn btn-success">Approuve</a>
-                 <a href="#" class="btn btn-info">Edit</a>
-                 <a href="#" class="btn btn-warning">Delete</a>
-             </div>
          </div>
      </div>
 
@@ -45,7 +38,7 @@
          </tr>
          </thead>
 
-         {{ dump() }}
+{#         {{ dump() }}#}
          {% for comment in comments %}
              <tbody>
              <tr>
