--- a/app/views/pages/admin.edit.chapters.html.twig
+++ b/app/views/pages/admin.edit.chapters.html.twig
@@ -1,7 +1,7 @@
 ﻿{% extends "admin.base.html.twig" %}
 
 {% block pagesActive %}
-    <a href="index.php?action=adminView" class="list-group-item list-group-item-action"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
+{#    <a href="index.php?action=adminView" class="list-group-item list-group-item-action"><i class="fas fa-tachometer-alt"></i> Dashboard</a>#}
     <a href="index.php?action=adminChapters" class="list-group-item list-group-item-action active"><i class="fas fa-book"></i> Chapitres</a>
     <a href="index.php?action=adminComments" class="list-group-item list-group-item-action"><i class="fas fa-comments"></i> Commentaires</a>
 
@@ -14,7 +14,7 @@
         {% else %}
         <h2>Ajouter Chapitre</h2>
         {% endif %}
-        {{ dump(chapter) }}
+{#        {{ dump(chapter) }}#}
         <p>Ajouter un chapitre avec cet formulaire</p>
         <form action="{{ chapter ? 'index.php?action=editChapter&id='~chapter.id : 'index.php?action=addChapter' }}" method="POST">
             <div class="form-group">
