--- a/app/views/pages/admin.comments.html.twig
+++ b/app/views/pages/admin.comments.html.twig
@@ -1,7 +1,7 @@
 {% extends "admin.base.html.twig" %}
 {% block pagesActive %}
-{#    <a href="index.php?action=adminView" class="list-group-item list-group-item-action"><i#}
-{#                class="fas fa-tachometer-alt"></i> Dashboard</a>#}
+    {#    <a href="index.php?action=adminView" class="list-group-item list-group-item-action"><i#}
+    {#                class="fas fa-tachometer-alt"></i> Dashboard</a>#}
     <a href="index.php?action=adminChapters" class="list-group-item list-group-item-action"><i class="fas fa-book"></i>
         Chapitres</a>
     <a href="index.php?action=adminComments" class="list-group-item list-group-item-action active"><i
@@ -38,7 +38,7 @@
          </tr>
          </thead>
 
-{#         {{ dump() }}#}
+         {#         {{ dump() }}#}
          {% for comment in comments %}
              <tbody>
              <tr>
@@ -58,12 +58,12 @@
                              <i class="far fa-thumbs-up"></i>Oui</a>
                          <a href="index.php?action=unapprouve&id={{ comment.comment_id }}" class="btn btn-warning">
                              <i class="far fa-thumbs-down"></i>Non</a>
-                         <a href="index.php?action=deleteComment&comment_id={{ comment.comment_id }}" class="btn btn-danger"
+                         <a href="index.php?action=deleteComment&comment_id={{ comment.comment_id }}"
+                            class="btn btn-danger"
                             onclick="return confirm('Confirmer la suppression ?');">
                              <i class="fa fa-trash"></i>Effacer</a>
                      </div>
                  </td>
-
 
              </tr>
              </tbody>
