--- a/app/views/pages/chapter.html.twig
+++ b/app/views/pages/chapter.html.twig
@@ -141,7 +141,7 @@
                             <div class="col-lg-12">
                                 <ul class="list-unstyled">
                                     {% for chapter in chapters %}
-                                        <li><a href="#">{{ chapter.title|raw }}</a>
+                                        <li><a href="index.php?action=showChapter&id={{ chapter.id }}">{{ chapter.title|raw }}</a>
                                         </li>
                                     {% endfor %}
                                 </ul>
