--- a/app/views/pages/chapter.html.twig
+++ b/app/views/pages/chapter.html.twig
@@ -32,7 +32,7 @@
                     <hr>
 
                     <!-- Date/Time -->
-                    <p> Publie le {{ chapter.content_date | date('d/m/Y') }}</p>
+                    <p> publié le {{ chapter.content_date | date('d/m/Y') }}</p>
 
                     <hr>
 
