--- a/app/views/pages/chapters.html.twig
+++ b/app/views/pages/chapters.html.twig
@@ -22,7 +22,7 @@
 
                             <h4><a href="index.php?action=showChapter&id={{ chapter.id }}">{{ chapter.title |raw }}</a>
                             </h4>
-                            <div class="bg-light p-2 mb-3">publie le {{ chapter.content_date|date("d/m/Y") }} par <span>Jean Forteroche</span>
+                            <div class="bg-light p-2 mb-3">publié le {{ chapter.content_date|date("d/m/Y") }} par <span>Jean Forteroche</span>
                             </div>
 
                             <img class="img-fluid" src="https://picsum.photos/id/{{ chapter.id + photoId }}/730/250"
