--- a/app/views/pages/contact.html.twig
+++ b/app/views/pages/contact.html.twig
@@ -44,7 +44,7 @@
     </section>
     <section class="bg-dark">
         <div class="container text-white text-center py-5">
-            <p class="lead">REJOIIGNEZ NOTRE NEWSLETTER POUR AVOIR LES DERNIERES INFO</p>
+            <p class="lead">REJOIIGNEZ NOTRE NEWSLETTER POUR AVOIR LES DERNIERES INFOS</p>
             <div class="row justify-content-center">
                 <div class="col-10 col-sm-8 col-md-6 col-lg-4">
                     <form action="" class="form-inline">
