--- a/app/views/pages/chapters.html.twig
+++ b/app/views/pages/chapters.html.twig
@@ -28,7 +28,7 @@
                             <img class="img-fluid" src="https://picsum.photos/id/{{ chapter.id + photoId }}/730/250"
                                  alt="">
 
-                            <p class="card-text py-2 text-justify">
+                            <p class="card-text  mt-2 py-2 text-justify">
                                 {{ chapter.content |slice(0,500)|raw }}...
                             </p>
 
