--- a/app/views/pages/contact.html.twig
+++ b/app/views/pages/contact.html.twig
@@ -19,17 +19,17 @@
                                    value=""/>
                         </div>
                         <div class="form-group">
-                            <input type="text" name="txtEmail" class="form-control" placeholder="Email *" required
+                            <input type="email" name="txtEmail" class="form-control" placeholder="Email *" required
                                    value=""/>
                         </div>
                         <div class="form-group">
-                            <input type="text" name="txtPhone" class="form-control" placeholder="Mobile *"
+                            <input type="text" name="txtPhone" class="form-control" placeholder="Mobile "
                                    value=""/>
                         </div>
                     </div>
                     <div class="col-md-5">
                         <div class="form-group">
-                            <textarea name="txtMsg" class="form-control" placeholder="Message *"
+                            <textarea name="txtMsg" class="form-control" placeholder="Message *" required
                                       style="width: 100%; height: 150px;"></textarea>
                         </div>
                     </div>
