--- a/app/views/pages/admin.edit.chapters.html.twig
+++ b/app/views/pages/admin.edit.chapters.html.twig
@@ -1,22 +1,24 @@
 ﻿{% extends "admin.base.html.twig" %}
 
 {% block pagesActive %}
-{#    <a href="index.php?action=adminView" class="list-group-item list-group-item-action"><i class="fas fa-tachometer-alt"></i> Dashboard</a>#}
-    <a href="index.php?action=adminChapters" class="list-group-item list-group-item-action active"><i class="fas fa-book"></i> Chapitres</a>
-    <a href="index.php?action=adminComments" class="list-group-item list-group-item-action"><i class="fas fa-comments"></i> Commentaires</a>
+
+    <a href="index.php?action=adminChapters" class="list-group-item list-group-item-action active"><i
+                class="fas fa-book"></i> Chapitres</a>
+    <a href="index.php?action=adminComments" class="list-group-item list-group-item-action"><i
+                class="fas fa-comments"></i> Commentaires</a>
 
 {% endblock %}
 
 {% block principal %}
     <div class="card card-body bg-light ">
         {% if chapter %}
-        <h2>Modifier Chapitre</h2>
+            <h2>Modifier Chapitre</h2>
         {% else %}
-        <h2>Ajouter Chapitre</h2>
+            <h2>Ajouter Chapitre</h2>
         {% endif %}
-{#        {{ dump(chapter) }}#}
         <p>Ajouter un chapitre avec cet formulaire</p>
-        <form action="{{ chapter ? 'index.php?action=editChapter&id='~chapter.id : 'index.php?action=addChapter' }}" method="POST">
+        <form action="{{ chapter ? 'index.php?action=editChapter&id='~chapter.id : 'index.php?action=addChapter' }}"
+              method="POST">
             <div class="form-group">
                 <div class="py-2">
                     <label for="title">Titre:</label>
