--- a/app/views/pages/admin.comments.html.twig
+++ b/app/views/pages/admin.comments.html.twig
@@ -1,7 +1,5 @@
 {% extends "admin.base.html.twig" %}
 {% block pagesActive %}
-    {#    <a href="index.php?action=adminView" class="list-group-item list-group-item-action"><i#}
-    {#                class="fas fa-tachometer-alt"></i> Dashboard</a>#}
     <a href="index.php?action=adminChapters" class="list-group-item list-group-item-action"><i class="fas fa-book"></i>
         Chapitres</a>
     <a href="index.php?action=adminComments" class="list-group-item list-group-item-action active"><i
@@ -38,7 +36,6 @@
          </tr>
          </thead>
 
-         {#         {{ dump() }}#}
          {% for comment in comments if comment.comment_status == 'unapprouved' or comment.comment_status == 'newComment' %}
              <tbody>
              <tr>
@@ -47,17 +44,16 @@
                      <a href="index.php?action=showChapter&id={{ comment.comment_chapter_id }}">{{ comment.comment_author }}</a>
                  </td>
                  <td>{{ comment.comment_content |raw }}</td>
-                 <td>{{ comment.comment_email | raw}}</td>
+                 <td>{{ comment.comment_email | raw }}</td>
                  <td>{{ comment.comment_status }}</td>
-                 <td><a href="index.php?action=showChapter&id={{ comment.comment_chapter_id }}">{{ comment.title | raw}}</a>
+                 <td>
+                     <a href="index.php?action=showChapter&id={{ comment.comment_chapter_id }}">{{ comment.title | raw }}</a>
                  </td>
                  <td>{{ comment.comment_date }}</td>
                  <td>
                      <div class="btn-group btn-group-sm float-right" role="group" aria-label="...">
                          <a href="index.php?action=approuve&id={{ comment.comment_id }}" class="btn btn-success">
                              <i class="far fa-thumbs-up"></i>Oui</a>
-{#                         <a href="index.php?action=unapprouve&id={{ comment.comment_id }}" class="btn btn-warning">#}
-{#                             <i class="far fa-thumbs-down"></i>Non</a>#}
                          <a href="index.php?action=deleteComment&comment_id={{ comment.comment_id }}"
                             class="btn btn-danger"
                             onclick="return confirm('Confirmer la suppression ?');">
