--- a/app/views/pages/home.html.twig
+++ b/app/views/pages/home.html.twig
@@ -10,7 +10,7 @@
     <section id="showcase" class="d-flex justify-content-center align-items-center">
         <div id="overlay"></div>
         <div id="header" class="container text-white text-center">
-            <h3 class="display-5 mb-5">DÉCOUVREZ SON NOUVEAU ROMAN</h3>
+            <h3 class="display-5 mb-5 d-none d-md-block">DÉCOUVREZ SON NOUVEAU ROMAN</h3>
             <h1 class="display-3 py-5">"Billet simple pour l'Alaska"</h1>
 
         </div>
